--- a/build
+++ b/build
@@ -1,4 +1,4 @@
 cd node_vapormall
-npx esbuild index.js --bundle --minify --outfile=../export/vapormall.js --global-name=vapormall
-cd ..
-./tweego_folder/tweego -l -o export/index.html src
+npx esbuild index.js --bundle --minify --outfile=../src2/meta/vapormall.js --global-name=vapormall
+cd ../src2
+npx ifc -o export/index.html
