--- a/node_vapormall/package.json
+++ b/node_vapormall/package.json
@@ -14,6 +14,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "esbuild": "0.19.2"
+    "esbuild": "0.19.2",
+    "iffinity": "^0.2.1"
   }
 }
