Get this branch up-to-date with changes made in main

--- a/src2/iff-config.json
+++ b/src2/iff-config.json
@@ -10,6 +10,11 @@
         "story": "meta/vapormall.js"
     },
     "styles": {
-        "story": "meta/styles/stylesheet.css"
+        "story": [
+            "meta/styles/stylesheet.css",
+            "meta/styles/fonts.css",
+            "meta/styles/otherstyles.css",
+            "meta/styles/tagstyles.css"
+        ]
     }
 }
