--- a/node_vapormall/package.json
+++ b/node_vapormall/package.json
@@ -14,7 +14,6 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "esbuild": "0.19.2",
-    "iffinity": "^0.2.1"
+    "esbuild": "0.19.2"
   }
 }
