Start of battle log

--- a/src/iff-config.json
+++ b/src/iff-config.json
@@ -12,9 +12,7 @@
     "styles": {
         "story": [
             "meta/styles/stylesheet.css",
-            "meta/styles/fonts.css",
-            "meta/styles/otherstyles.css",
-            "meta/styles/tagstyles.css"
+            "meta/styles/fonts.css"
         ]
     }
 }
