Further improved party menu

--- a/src/iff-config.json
+++ b/src/iff-config.json
@@ -12,7 +12,8 @@
     "styles": {
         "story": [
             "meta/styles/stylesheet.css",
-            "meta/styles/fonts.css"
+            "meta/styles/fonts.css",
+            "meta/styles/skillTypes.css"
         ]
     }
 }
