--- a/src/iff-config.json
+++ b/src/iff-config.json
@@ -11,6 +11,7 @@
     },
     "styles": {
         "story": [
+            "meta/styles/reset.css",
             "meta/styles/stylesheet.css",
             "meta/styles/fonts.css",
             "meta/styles/skillTypes.css"
