--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "esbuild": "0.19.2",
-    "iffinity": "^0.4.0"
+    "iffinity": "^0.4.0",
+    "konva": "^9.3.2"
   }
 }
