Re-organize css stylesheets

--- a/src/iff-config.json
+++ b/src/iff-config.json
@@ -13,6 +13,7 @@
         "story": [
             "meta/styles/reset.css",
             "meta/styles/stylesheet.css",
+            "meta/styles/menuStyle.css",
             "meta/styles/fonts.css",
             "meta/styles/skillTypes.css"
         ]
