--- a/build
+++ b/build
@@ -1,6 +1,7 @@
 rm -f ../export/index.html
 cd node_vapormall
-npx esbuild index.js --bundle --minify --outfile=../src/meta/vapormall.js --global-name=vapormall
+# npx esbuild index.js --bundle --minify --outfile=../src/meta/vapormall.js --global-name=vapormall
+npx esbuild index.js --bundle --outfile=../src/meta/vapormall.js --global-name=vapormall
 
 # make vapormall globally accessible
 # from https://stackoverflow.com/questions/64806255/how-to-expose-a-class-to-the-global-scope-with-esbuild
