Implement addWrapperHtml.ts

--- a/src/iff-config.json
+++ b/src/iff-config.json
@@ -7,7 +7,8 @@
         "version": "1.0.0"
     },
     "scripts": {
-        "story": "meta/vapormall.js"
+        "story": "meta/vapormall.js",
+        "global": "meta/scripts/globalScript.js"
     },
     "styles": {
         "story": [
