add jsx/dom-chef syntax (breaks everything)
Attempt to convert the code so all the html-generating JS
uses JSX + React components instead of vanilla JS notation
which is a lot clunkier. Unfortunately it breaks everything.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "dom-chef": "^5.1.1",
     "esbuild": "0.19.2",
     "iffinity": "^0.4.0",
     "konva": "^9.3.2"
