Add code from radnyx/crystal
Adds a lot of dependencies too
vapormall-ps is a new dependency (separate github repo)
Not yet a submodule, make change later?
Not yet integrated but proof it works

crystal assets included in export because I was too lazy
to move them to assets and include them in the .gitignore,
they are small files so it's probably fine

--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
     "dom-chef": "^5.1.1",
     "esbuild": "0.19.2",
     "iffinity": "^0.4.0",
-    "konva": "^9.3.2"
+    "konva": "^9.3.2",
+
+    "@pixi/filter-color-matrix": "^6.5.1",
+    "@pixi/sound": "^4.3.0",
+    "@pkmn/streams": "^1.1.0",
+    "@vapormall/sim": "file:../vapormall-ps/sim",
+    "pixi-filters": "^4.1.6",
+    "pixi.js": "^8.0.2",
+    "pixi.js-legacy": "^6.5.1"
   }
 }
